--- a/style.css
+++ b/style.css
@@ -5,3 +5,28 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+
+#header{
+    background-color:#CF7A2F;
+    color:white;
+    height:60px;
+}
+
+.nav a{
+    color:white;
+    text-decoration:none
+}
+
+#hero{
+    font-size:22px;
+    color:white;
+}
+
+#hero h1{
+    font-size:80px;
+}
+
+#cta{
+    background-color: #553870;
+    color:white;
+}
